added local analysis files

--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,8 @@ output_old/
 outputforvmec/
 minimizers/
 20220124-02-037_dataForFlorian/
-
+qsmeasures/
+qfmsurfacesdet/
+analysisresults/
+corrections/
+losses/
